--- a/F/addclient.css
+++ b/F/addclient.css
@@ -29,3 +29,10 @@ h1 {
     font-size: 32px;
     font-weight: 600;
 }
+
+h2 {
+    color: #444;
+    margin-bottom: 20px;
+    font-size: 24px;
+    font-weight: 600;
+}
