--- a/F/index.css
+++ b/F/index.css
@@ -29,4 +29,10 @@ h1 {
     font-size: 32px;
     font-weight: 600;
 }
-lhkuj
+
+h2 {
+    color: #444;
+    margin-bottom: 20px;
+    font-size: 24px;
+    font-weight: 600;
+}
